--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.3.1",
     "@tailwindcss/vite": "^4.1.5",
-    "astro": "^5.7.10"
+    "astro": "^5.7.10",
+    "astro-seo": "^0.8.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.5",
